--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /Lista1/build/
 /series/nbproject/private/
 /series/build/
+/pruebaMySQL/nbproject/private/
+/pruebaMySQL/build/
+/accesoMysql/nbproject/private/
+/accesoMysql/build/
