--- a/accesoMysql/nbproject/project.properties
+++ b/accesoMysql/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=pruebaMySQL
+application.title=accesoMysql
 application.vendor=sepla
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,12 +25,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/pruebaMySQL.jar
+dist.jar=${dist.dir}/accesoMysql.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.46-bin.jar=mysql-connector-java-5.1.46-bin.jar
-file.reference.mysql-connector-java-5.1.46.jar=mysql-connector-java-5.1.46.jar
+file.reference.mysql-connector-java-5.1.46-bin.jar=../pruebaMySQL_/mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-5.1.46.jar=../pruebaMySQL_/mysql-connector-java-5.1.46.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -60,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pruebamysql.PruebaMySQL
+main.class=accesomysql.AccesoMysql
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
