--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /pruebaMySQL/build/
 /accesoMysql/nbproject/private/
 /accesoMysql/build/
+/testStatement/nbproject/private/
+/testStatement/build/
